--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -258,7 +258,7 @@
               role="button"
             >
               <img
-                src="https://img.shields.io/badge/scholar-{% google_scholar_citations site.scholar_userid entry.google_scholar_id %}-4285F4?logo=googlescholar&labelColor=beige"
+                src="https://img.shields.io/badge/scholar-{% raw %}{% google_scholar_citations site.scholar_userid entry.google_scholar_id %}{% endraw %}-4285F4?logo=googlescholar&labelColor=beige"
                 alt="{% google_scholar_citations site.scholar_userid entry.google_scholar_id %} Google Scholar citations"
               >
             </a>
